--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_EMAILJS_PUBLIC_KEY=Z51grPjFr4PnyQSp8
 VITE_EMAILJS_SERVICE_ID=service_832bybl
-VITE_EMAILJS_TEMPLATE_VERIFICATION=template_td6rjm8
-VITE_EMAILJS_TEMPLATE_CITA=template_38vq18p
+VITE_EMAILJS_TEMPLATE_ID=template_td6rjm8
+#VITE_EMAILJS_TEMPLATE_ID=template_38vq18p
