--- a/.env
+++ b/.env
@@ -1,4 +1,16 @@
-VITE_EMAILJS_PUBLIC_KEY=Z51grPjFr4PnyQSp8
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=AIzaSyDBnCsHYz9_-wa7pcl-E5eHAo-JWTCQeCM
+VITE_FIREBASE_AUTH_DOMAIN=peluqueria-app-26873.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=peluqueria-app-26873
+VITE_FIREBASE_STORAGE_BUCKET=peluqueria-app-26873.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=1085240722207
+VITE_FIREBASE_APP_ID=1:1085240722207:web:b5ea898e4b677ea708a62a
+VITE_FIREBASE_MEASUREMENT_ID=G-N3TNB4L2RG
+
+# EmailJS Configuration
 VITE_EMAILJS_SERVICE_ID=service_832bybl
+VITE_EMAILJS_PUBLIC_KEY=Z51grPjFr4PnyQSp8
+# Template para citas
 VITE_EMAILJS_TEMPLATE_ID=template_td6rjm8
-VITE_EMAILJS_TEMPLATE_ID=template_38vq18p
+# Template para códigos de verificación
+VITE_EMAILJS_VERIFICATION_TEMPLATE_ID=template_38vq18p
