--- a/.env
+++ b/.env
@@ -10,7 +10,10 @@ VITE_FIREBASE_MEASUREMENT_ID=G-N3TNB4L2RG
 # EmailJS Configuration
 VITE_EMAILJS_SERVICE_ID=service_832bybl
 VITE_EMAILJS_PUBLIC_KEY=Z51grPjFr4PnyQSp8
-# Template para citas
-VITE_EMAILJS_TEMPLATE_ID=template_td6rjm8
-# Template para códigos de verificación
-VITE_EMAILJS_VERIFICATION_TEMPLATE_ID=template_38vq18p
+# Template para confirmación de reserva (cliente)
+VITE_EMAILJS_APPOINTMENT_TEMPLATE_ID=template_38vq18p
+# Template para códigos de verificación y recuperación
+VITE_EMAILJS_VERIFICATION_TEMPLATE_ID=template_td6rjm8
+
+# Admin Configuration
+VITE_ADMIN_PASSWORD=admin123
