--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,8 @@ VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 # EmailJS Configuration
 VITE_EMAILJS_SERVICE_ID=your_service_id
 VITE_EMAILJS_PUBLIC_KEY=your_public_key
-VITE_EMAILJS_TEMPLATE_ID=your_appointment_template_id
-VITE_EMAILJS_VERIFICATION_TEMPLATE_ID=your_verification_template_id
+VITE_EMAILJS_APPOINTMENT_TEMPLATE_ID=template_38vq18p
+VITE_EMAILJS_VERIFICATION_TEMPLATE_ID=template_td6rjm8
+
+# Admin Configuration
+VITE_ADMIN_PASSWORD=admin123
